--- a/api/python/requirements.txt
+++ b/api/python/requirements.txt
@@ -1,24 +1,29 @@
-anyio==3.6.2
-cachelib==0.10.2
-certifi==2023.7.22
-charset-normalizer==3.2.0
-click==8.1.3
-distro==1.8.0
-Flask==2.2.5
-Flask-Cors==4.0.0
-Flask-Session==0.4.0
+annotated-types==0.7.0
+anyio==4.4.0
+blinker==1.8.2
+cachelib==0.13.0
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+distro==1.9.0
+Flask==3.0.3
+Flask-Cors==4.0.1
+Flask-Session==0.8.0
 h11==0.14.0
-httpcore==0.16.3
-httpx==0.23.3
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.2
-modern-treasury==1.11.0
-pydantic==1.10.7
-python-dotenv==1.0.0
-rfc3986==1.5.0
-sniffio==1.3.0
-typing_extensions==4.5.0
-urllib3==2.0.3
-Werkzeug==2.2.3
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+modern-treasury==1.35.1
+msgspec==0.18.6
+pydantic==2.7.4
+pydantic_core==2.20.0
+python-dotenv==1.0.1
+requests==2.32.3
+rfc3986==2.0.0
+sniffio==1.3.1
+typing_extensions==4.12.2
+urllib3==2.2.2
+Werkzeug==3.0.3
